[package]
name = "bittyset"
version = "0.1.1"
description = "A BitSet type for manipulating bit sets."
homepage = "https://github.com/arucil/bittyset"
repository = "https://github.com/arucil/bittyset"
documentation = "https://docs.rs/bittyset"
readme = "README.md"
authors = ["amlo <xplzjwz@gmail.com>"]
keywords = ["data-structures", "bitset"]
categories = ["mathematics", "data-structures", "algorithms"]
edition = "2021"
license = "MIT"

[lib]
bench = false

[dev-dependencies]
pretty_assertions = "1.4.0"
quickcheck = "1.0.3"
criterion = "0.5.1"
bit-set = "0.8.0"
rand = "0.8.5"

[dependencies]
num-traits = "0.2.19"
quickcheck_macros = "1.0.0"
gensym = "0.1.1"

[[bench]]
name = "bitset"
harness = false
